--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,9 +1,13 @@
 /* Styles go here */
 
 body {
-    height: 100%;
+    height: 100vh;
     margin: 0;
     font-family: 'Jost';
+}
+
+#root {
+    height: 100%;
 }
 
 * {
