--- a/frontend/src/components/css/Pool.css
+++ b/frontend/src/components/css/Pool.css
@@ -1,44 +1,46 @@
 /* Styles go here */
 
+.bg {
+	/* background-color: #292929; */
+	/* background: repeating-linear-gradient(
+		30deg,
+		#292929,
+		#292929 30px,
+		#303030 30px,
+		#303030 60px
+	); */
+	background: linear-gradient(to bottom right, #292929, #0e504e);;
+	height: 100%
+}
+
+#loader{
+	display: flex;
+	width: 100%;
+	height: 100vh;
+	justify-content: center;
+	align-items: center;
+	color: #fff;
+	font-size: 2rem;
+}
+
 #content {
     height: 100%;
 	text-align: center;
 }
 
 h1 {
-	padding: 80px 0 80px;
+	padding: 80px 0 10px;
+	color: #27e2dc;
+	text-shadow: rgba(0, 0, 0, 0.247) 2px 5px;
 }
 
 .info_title {
 	margin: 20px 0;
 	font-size: 1.2rem;
+	color: #fff;
 }
 
 .info_title .heading {
 	margin: 20px 0;
 }
 
-.button {
-	-webkit-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-	-moz-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-	-ms-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-	-o-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-	transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-	display: block;
-	margin: 20px auto;
-	max-width: 180px;
-	text-decoration: none;
-	border-radius: 4px;
-	padding: 20px 30px;
-}
-
-a.button {
-	color: rgba(30, 22, 54, 0.6);
-	box-shadow: rgba(30, 22, 54, 0.4) 0 0px 0px 2px inset;
-    font-family: 'Jost';
-}
-
-a.button:hover {
-	color: rgba(255, 255, 255, 0.85);
-	box-shadow: rgba(30, 22, 54, 0.7) 0 0px 0px 40px inset;
-}
