--- a/frontend/src/components/css/Home.css
+++ b/frontend/src/components/css/Home.css
@@ -1,25 +1,14 @@
 .home { 
     font-family: 'Noto Sans KR';
-    margin: 0 15% -1em; 
     padding-top: 50px;
-
-}
-.bg {
-	/* background-color: #292929; */
-	/* background: repeating-linear-gradient(
-		30deg,
-		#292929,
-		#292929 30px,
-		#303030 30px,
-		#303030 60px
-	); */
-	background: linear-gradient(to bottom right, #292929, #0e504e);
-	height: 120%
+    background: linear-gradient(to bottom right, #292929, #0e504e);
+	overflow-y: auto;
 }
 .wemadefuture{
     text-align: center;
     font-size:40px;
 	color: #27e2dc;
+    text-shadow: #1f1f1f 1px 4px;
 
 }
 .maintitle{
@@ -32,6 +21,24 @@
     justify-content: space-between;
     display: flex;
 }
+
+.imgs{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 22%;
+    text-align: center;
+    background-color: #29292956;
+    padding: 20px 15px;
+    border-radius: 10px;
+}
+
+.imgs p {
+    color: #ddffff;
+    margin-top: 5px;
+    word-break: break-all;
+}
+
 .farmimg{
     filter:invert(100%);
     height:75px;
@@ -44,7 +51,6 @@
 }
 .nftimg{
     filter:invert(100%);
-    margin-left:20%;
     height:75px;
     width:75px;
 }
@@ -53,27 +59,7 @@
     height:75px;
     width:75px;
 }
-.farm{
-    display: flex flexdirection column;
-    Justify-content: center;
-    margin-left: 10%;
-    margin-right:5%;
-}
-.launchpad{
-    display: flex flexdirection column;
-    margin-right:10%;
-    Justify-content: center;
-}
-.nft{
-    display: flex flexdirection column;
-    Justify-content: center;
-    margin-right:5%;
-}
-.game{
-    display: flex flexdirection column;
-    Justify-content: center;
-    margin-right:5%;
-}
+
 h5{
     text-align: center;
     color:#27e2dc;
