--- a/frontend/src/components/css/Pool.css
+++ b/frontend/src/components/css/Pool.css
@@ -10,8 +10,9 @@
 		#303030 60px
 	); */
 	background: linear-gradient(to bottom right, #292929, #0e504e);
-	height: 120%
+	overflow-y: auto;
 }
+
 
 #loader{
 	display: flex;
