fix: Overall heights and color

--- a/frontend/src/components/css/Farm.css
+++ b/frontend/src/components/css/Farm.css
@@ -1,6 +1,6 @@
 /* Styles go here */
 
-.bg {
+.fbg {
 	/* background-color: #292929; */
 	/* background: repeating-linear-gradient(
 		30deg,
@@ -10,7 +10,10 @@
 		#303030 60px
 	); */
 	background: linear-gradient(to bottom right, #292929, #0e504e);
-	height: 120%
+	height: 100vh
+}
+.container{
+	height: 100%;
 }
 
 #loader{
