--- a/frontend/src/components/css/RedeemBoxes.css
+++ b/frontend/src/components/css/RedeemBoxes.css
@@ -15,7 +15,7 @@
     min-width: 380px;
     height: 80%;
     margin: 50px 1.6%;
-	background-color: #0CADA7; /**/
+	background-color: #0cada8e0; /**/
 	color: #fff;
 	border-radius: 4px;
 	
