--- a/frontend/src/components/css/FarmBox.css
+++ b/frontend/src/components/css/FarmBox.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: flex-start;
     width: 100%;
-	height: 100vh;
+	height: 500px;
 }
 #divider {
 	border-top: 4px;
@@ -20,7 +20,7 @@
     height: 45%;
     min-height: 350px;
     margin: 40px 1.6% 0;
-	background-color: #0CADA7; /**/
+	background-color: #0cada8e0; /**/
 	color: #fff;
 	border-radius: 4px;
 }
