--- a/frontend/src/components/css/MintBoxes.css
+++ b/frontend/src/components/css/MintBoxes.css
@@ -4,7 +4,7 @@
     align-items: center;
     flex-wrap: wrap;
     width: 100%;
-	height: 100vh;
+	height: 500px;
 }
 .box {
 	display: flex;
@@ -15,7 +15,6 @@
     min-width: 380px;
     height: 80%;
     margin: 50px 1.6%;
-	background-color: #0CADA7; /**/
 	color: #fff;
 	border-radius: 4px;
 }
