--- a/frontend/src/components/css/Pool.css
+++ b/frontend/src/components/css/Pool.css
@@ -10,7 +10,7 @@
 		#303030 60px
 	); */
 	background: linear-gradient(to bottom right, #292929, #0e504e);
-	overflow-y: auto;
+	height: 110%;
 }
 
 
@@ -30,7 +30,6 @@
 }
 
 h1 {
-	padding: 80px 0 10px;
 	color: #27e2dc;
 	text-shadow: rgba(0, 0, 0, 0.247) 2px 5px;
 }
@@ -42,6 +41,6 @@ h1 {
 }
 
 .info_title .heading {
-	margin: 20px 0;
+	margin: 10px 0 0;
 }
 
